--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/oka-logo-d-black-bg.png" alt=""></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/oka-logo-d-black-bg.png" class="img-fluid" alt="Ogwr Karate Association Logo"></a>
       <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
       <h2 data-aos="fade-up">We are team of talented designers making websites with Bootstrap</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
