--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Knight Bootstrap Template - Index</title>
+  <title>Ogwr Karate Association</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,9 +40,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/oka-logo-d-black-bg.png" class="img-fluid" alt="Ogwr Karate Association Logo"></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/oka-logo-d-black-bg-large.png" class="img-fluid" alt="Ogwr Karate Association Logo"></a>
       <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
-      <h2 data-aos="fade-up">We are team of talented designers making websites with Bootstrap</h2>
+      <h2 data-aos="fade-up">We are friendly group training under Chief Instructor Colin Medway 6th Dan with 45 years experience.</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -113,9 +113,9 @@
                 magna aliqua.
               </p>
               <ul>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bx bx-check-double"></i> Safe - experienced instructors are on hand to make sure you leave the dojo at least as healthy as you entered it</li>
+                <li><i class="bx bx-check-double"></i> Fun - make friends and enjoy learning and exploring the art together</li>
+                <li><i class="bx bx-check-double"></i> Productive - get fit, keep yourself safe, develop discipline</li>
               </ul>
               <p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
