Fixed typo & experience

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/logo-hero.png" class="img-fluid" alt="Ogwr Karate Association Logo"></a>
       <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
-      <h2 data-aos="fade-up">We are friendly group training under Chief Instructor Colin Medway 6th Dan with 45 years experience</h2>
+      <h2 data-aos="fade-up">We are a friendly group training under Chief Instructor Colin Medway 6th Dan with 47 years experience</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
