--- a/new.html
+++ b/new.html
@@ -41,9 +41,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/logo-hero.png" class="img-fluid" alt="Ogwr Karate Association Logo"></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="images/logo/logo-hero.png" class="img-fluid" alt="Ogwr Karate Association logo"></a>
       <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
-      <h2 data-aos="fade-up">We are a friendly group training under Chief Instructor Colin Medway 6th Dan with 47 years experience</h2>
+      <h2 data-aos="fade-up">We are a friendly group in Bridgend County training under Chief Instructor Colin Medway 6th Dan with 47 years experience</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -53,7 +53,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="images/logo/logo-small.gif" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="images/logo/logo-small.png" alt="Ogwr Karate Association logo" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
