--- a/new.html
+++ b/new.html
@@ -404,6 +404,10 @@
         </div>
 
       </div>
+      <div class="section-footnote">
+          <p class="text-muted">Concessions available for families training together: <mark>pay for three, the rest are free</mark>.</p>
+      </div>
+
     </section><!-- End Classes Section -->
 
     <!-- ======= How to Find Us Section ======= -->
@@ -416,7 +420,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <h3>Maesteg Dojo</h3>
+          <h3 data-aos="zoom-in">Maesteg Dojo</h3>
           <div class="col-lg-6" data-aos="fade-right">
             <div id="maesteg-map" class="map border rounded"></div>
           </div>
@@ -432,7 +436,7 @@
         </div>
 
         <div class="row mt-5 justify-content-center">
-          <h3>Aberkenfig Dojo</h3>
+          <h3 data-aos="zoom-in">Aberkenfig Dojo</h3>
           <div class="col-lg-6"  data-aos="fade-right">
             <div class="card h-100">
               <img src="images/aberkenfig.png" class="card-img-top" alt="Ogwr Karate Maesteg Dojo">
@@ -489,7 +493,7 @@
     <section id="contact" class="contact section-bg">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title" data-aos="fade-up">
           <h2>Contact</h2>
           <p>If you have questions or want to chat about joining please feel free to get in touch</p>
         </div>
@@ -497,7 +501,7 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-4 order-2">
-            <div class="info d-flex flex-column justify-content-center" data-aos="fade-up">
+            <div class="info d-flex flex-column justify-content-center" data-aos="zoom-in">
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
@@ -538,7 +542,10 @@
             <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">What do I need to start training karate?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                No special equipment is required for you to start. After a few sessions, if you are going to continue, then we can supply you with a suitable gi (uniform) and
+                No special equipment is required for you to start, just turn up for your first session wearing clothing suitable for exercise (e.g. t-shirt and jogging bottoms).
+              </p>
+              <p>
+                After a few sessions, if you are going to continue, then we can supply you with a suitable gi (uniform) and
                 arrange your license. Your licence provides you with insurance in case of an accident when training and also registers you with the Welsh Karate Governing Body.
               </p>
             </div>
@@ -554,37 +561,41 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="200">
-            <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed">What are the costs?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                We try hard to make learning and training with Ogwr Karate Association as inexpensive as possible. Your first lesson is free, if you come back (most people do!) then you
+                just pay on the day for each session that you attend. We currently charge £4 per session.
+              </p>
+              <p>
+                We offer concessions for families training together, we only charge for three members of a household, the rest are free.
+              </p>
+              <p>
+                After a few weeks of training, when you are sure that you are going to continue, then you will need a license and a gi. Licenses cost £21 and are renewable annually. We can
+                supply you with a gi, the cost varies depending on size but is usually around £20.
+              </p>
+              <p>
+                Broken down the costs are: £4 per session, £21 license paid annually, a one-off payment for a gi of around £20.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="300">
-            <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">What style of karate do you teach?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                At Ogwr Karate Association we teach <a href="https://en.wikipedia.org/wiki/Wad%C5%8D-ry%C5%AB">Wadō-ryū</a> karate, a Japanese Martial Art founded
+                by <a href="https://en.wikipedia.org/wiki/Hironori_%C5%8Ctsuka">Hironori Ōtsuka</a> Sensei (1892-1982), it blends elements of Shindō_Yōshin-ryū Jujitsu and traditional
+                Okinawan Karate to form a highly effective combat system.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="400">
-            <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">I have more questions<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="500">
-            <a data-bs-toggle="collapse" data-bs-target="#faq6" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Feel free to <a href="#contact">contact us</a> with any questions you have, we are always happy to help.
               </p>
             </div>
           </li>
