Cleaned up grammar, spelling, and minor code issues

--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 
   <title>Ogwr Karate Association</title>
   <meta content="A friendly karate group in Bridgend County, training under Chief Instructor Colin Medway 6th Dan with 47 years experience" name="description">
-  <meta content="karate, martial arts, bridgend, maesteg, aberkenfig, bryncethin, sarn, tondu" name="keywords">
+  <meta content="karate, martial arts, Bridgend, Maesteg, Aberkenfig, Bryncethin, Sarn, Tondu" name="keywords">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -94,7 +94,7 @@
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
               <h3>Developing students through fun & hard work</h3>
-              <p class="">
+              <p>
                 Ogwr Karate Association is one of the longest established karate associations in South Wales. For almost five
                 decades our clubs have taught hundreds of students of all ages under the expert guidance of founder and chief
                 instructor Sensei Colin Medway.
@@ -131,7 +131,7 @@
               <i class="bx bx-brain"></i>
               <h4>Mind</h4>
               <p>
-                Exercise reduces stress and improves mental health, martial arts is particularly good at providing a break from the trials of work, school, and everyday life.
+                Exercise reduces stress and improves mental health, martial arts is an excellent way to get a break from the trials of work, school, and everyday life.
                 Training in karate helps you to de-stress, improves your focus, builds confidence, and increases self-esteem.
               </p>
             </div>
@@ -139,7 +139,7 @@
               <i class="bx bx-pulse"></i>
               <h4>Body</h4>
               <p>
-                Karate is a comprehensive martial art that includes all of the activities necessary to keep you physically fit and healthy. No matter what age or shape
+                Karate is a comprehensive martial art that includes all the activities necessary to keep you physically fit and healthy. No matter what age or shape
                 you are, everyone can benefit. Through training in karate you will gain better flexibility, speed, agility, balance, and coordination. You will build strength and
                 endurance at the same time as learning a new skill. Our training drills improve mobility and hand-eye coordination. Regular training will give you more energy,
                 make you less susceptible to injury, and help you sleep.
@@ -156,9 +156,9 @@
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-happy"></i>
               <h4>Fun</h4>
-              <p>People learn best when they are having fun and we work hard to make sure that our lessons are fun
+              <p>People learn best when they are having fun, and we work hard to make sure that our lessons are fun
                 and engaging for everyone. Our students enjoy meeting and making friends, developing their social and communication skills,
-                and seeing themselves and their friends improve and progress.</p>
+                and seeing themselves, and their friends, improve and progress.</p>
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2 border" style='background-image: url("images/benefits.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
@@ -319,7 +319,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  Sensei Colin Medway is a amazing instructor, he has helped me gain the confidence and skills to achieve my 1st Dan black belt.
+                  Sensei Colin Medway is an amazing instructor, he has helped me gain the confidence and skills to achieve my 1st Dan black belt.
                 </p>
                 <h3>Ben V</h3>
                 <h4>Student</h4>
@@ -453,14 +453,14 @@
 
         <script type="text/javascript">
           function initMaps() {
-            var maestegCenter = new google.maps.LatLng(51.6108299,-3.6639835);
-            var maestegOptions = {
+            let maestegCenter = new google.maps.LatLng(51.6108299,-3.6639835);
+            let maestegOptions = {
               zoom: 15,
               center: maestegCenter,
               mapTypeId: google.maps.MapTypeId.ROADMAP
             }
-            var maestegMap = new google.maps.Map(document.getElementById('maesteg-map'), maestegOptions);
-            var maestegMarker = new google.maps.Marker({position: maestegCenter, map: maestegMap, title: "Ogwr Karate Maesteg Dojo"});
+            let maestegMap = new google.maps.Map(document.getElementById('maesteg-map'), maestegOptions);
+            let maestegMarker = new google.maps.Marker({position: maestegCenter, map: maestegMap, title: "Ogwr Karate Maesteg Dojo"});
             const infoWindow = new google.maps.InfoWindow();
             infoWindow.setContent(maestegMarker.getTitle());
             infoWindow.open(maestegMarker.getMap(), maestegMarker);
@@ -468,14 +468,14 @@
               infoWindow.open(maestegMarker.getMap(), maestegMarker);
             });
 
-            var aberkenfigCenter = new google.maps.LatLng(51.540140, -3.595128);
-            var aberkenfigOptions = {
+            let aberkenfigCenter = new google.maps.LatLng(51.540140, -3.595128);
+            let aberkenfigOptions = {
               zoom: 16,
               center: aberkenfigCenter,
               mapTypeId: google.maps.MapTypeId.ROADMAP
             }
-            var aberkenfigMap = new google.maps.Map(document.getElementById('aberkenfig-map'), aberkenfigOptions);
-            var aberkenfigMarker = new google.maps.Marker({position: aberkenfigCenter, map: aberkenfigMap, title: "Ogwr Karate Aberkenfig Dojo"});
+            let aberkenfigMap = new google.maps.Map(document.getElementById('aberkenfig-map'), aberkenfigOptions);
+            let aberkenfigMarker = new google.maps.Marker({position: aberkenfigCenter, map: aberkenfigMap, title: "Ogwr Karate Aberkenfig Dojo"});
             const aberkenfigInfoWindow = new google.maps.InfoWindow();
             aberkenfigInfoWindow.setContent(aberkenfigMarker.getTitle());
             aberkenfigInfoWindow.open(aberkenfigMarker.getMap(), aberkenfigMarker);
@@ -565,7 +565,7 @@
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 We try hard to make learning and training with Ogwr Karate Association as inexpensive as possible. Your first lesson is free, if you come back (most people do!) then you
-                just pay on the day for each session that you attend. We currently charge £4 per session.
+                just pay on the day for each session that you attend. We currently charge £4 for a session.
               </p>
               <p>
                 We offer concessions for families training together, we only charge for three members of a household, the rest are free.
@@ -575,7 +575,7 @@
                 supply you with a gi, the cost varies depending on size but is usually around £20.
               </p>
               <p>
-                Broken down the costs are: £4 per session, £21 license paid annually, a one-off payment for a gi of around £20.
+                Broken down the costs are: £4 each session, £21 license paid annually, a one-off payment for a gi of around £20.
               </p>
             </div>
           </li>
@@ -617,7 +617,7 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <a href="#header" class="scrollto footer-logo"><img src="images/logo/logo-footer.png" alt=""></a>
+            <a href="#header" class="scrollto footer-logo"><img src="images/logo/logo-footer.png" alt="Ogwr Karate Association logo"></a>
             <h3>Ogwr Karate Association</h3>
             <p>If you would like to join our friendly karate group come along to a class or get in touch.</p>
           </div>
@@ -634,7 +634,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>Ogwr Karate Association</span></strong>. All Rights Reserved.
+        Copyright &copy; <script>document.write(new Date().getFullYear().toString())</script> <strong><span>Ogwr Karate Association</span></strong>. All Rights Reserved.
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
